--- a/style.css
+++ b/style.css
@@ -60,8 +60,12 @@
 }
 
 .design_image img{/*目の画像サイズの調整*/
-	width: 300px;/*横幅*/
-	height: 300px;/*縦幅*/
+	width: 250px;/*横幅*/
+	height: 250px;/*縦幅*/
+}
+
+.design_image_photo{
+	margin: 20px;
 }
 
 .menu_area{
